<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.SignUp">

        <ImageView
            android:id="@+id/signUpImage1"
            android:layout_width="match_parent"
            android:layout_height="425dp"
            android:src="@drawable/imagefour"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/signupimage"/>

        <ImageView
            android:id="@+id/signUpImage2"
            android:layout_width="132dp"
            android:layout_height="54dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="46.47dp"
            android:contentDescription="@string/signupimage"
            android:src="@drawable/ibook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="216dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            android:background="@drawable/layoutbackground"
            android:backgroundTint="@color/white">

            <TextView
                android:id="@+id/SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="30sp"
                android:textColor="@color/textcolor"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/lotsInStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/there_is_lots_in_store_for_you"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/textcolor"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/enter_first_name"
                android:autofillHints="firstName"
                android:textColorHint="@color/hintcolor"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/enter_last_name"
                android:autofillHints="lastName"
                android:textColorHint="@color/hintcolor"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/enter_user_name"
                android:autofillHints="username"
                android:textColorHint="@color/hintcolor"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/enter_email_address"
                android:autofillHints="emailAddress"
                android:textColorHint="@color/hintcolor"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/enter_password"
                android:autofillHints="password"
                android:textColorHint="@color/hintcolor"
                android:inputType="text"/>

            <Button
                android:id="@+id/signUnBtn"
                android:layout_width="316dp"
                android:layout_height="50dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="50dp"
            app:layout_constraintTop_toBottomOf="@id/linearlayout1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="16sp"
                android:textColor="@color/newtoibookolor"/>

            <TextView
                android:id="@+id/signInClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="16sp"
                android:textColor="@color/textcolor"
                android:layout_marginStart="2dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>






</ScrollView>