<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OnBoardingScreen"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/OnBoardingImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/reading"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="214dp"
        android:contentDescription="@string/onboardingimage"/>



    <TextView
        android:id="@+id/OnboardingText"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/reading_is_a_conversatoion_all_books_talk_but_a_book_listens_as_well"
        android:textAlignment="center"
        android:textColor="@color/textcolor"
        android:textSize="20sp" />

    <Button
        android:id="@+id/getStarted"
        android:layout_width="316dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:text="@string/get_started"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"/>






</LinearLayout>